tests/testerina-integration-test/src/test/resources/command-outputs/windows/MockTest-testObjectMocking_NegativeCases7.txt
Compiling source
	intg_tests/object_mocking:0.0.0
WARNING [modules\TestHttpClient\main.bal:(54:45,54:82)] this function should explicitly return a value (BCE20350)
   |
54 |     public isolated function next() returns record {|AttributeDAO value;|}|Error? {
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

WARNING [main.bal:(47:5,47:47)] unused variable 'closeErr' (BCE20403)
   |
47 |     error? closeErr = attributeStream.close();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Running Tests with Coverage

	object_mocking

testMockInvalidStream has failed.


		Test execution time :*****ms


		[fail] testMockInvalidStream:

		    error {ballerina/test:0}FunctionSignatureMismatchError ("return value provided does not match the return type of function 'get_stream()'")
				callableName: thenReturnExt moduleName: ballerina.test.0 fileName: mock.bal lineNumber: 355
				callableName: thenReturn moduleName: ballerina.test.0.MemberFunctionStub fileName: mock.bal lineNumber: 148
				callableName: testMockInvalidStream moduleName: intg_tests.object_mocking$test.0.tests.main_error_test fileName: tests/main_error_test.bal lineNumber: 81
				callableName: testMockInvalidStream$lambda6$ moduleName: intg_tests.object_mocking$test.0.tests.test_execute-generated_*****lineNumber: 10
			


		0 passing
		1 failing
		0 skipped

Generating Test Report*****project-based-tests\object-mocking-tests\target\report\test_results.json

error: there are test failures
